stylesheet/stylesheet.css
:root{
  --primary-color: #2196f3;
  --secondary-color:#ff3d00;
  --header-color:#1e88e5;
  --secondary-information-color:#42a5f5;

  --text-color:white;
  --secondary-text-color:black;

  --background-color:#f3f0f0;
  --secondary-background-color:white;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Droid Serif', serif;
}

a{
  font-family:Ubuntu, serif;
  text-decoration:none;
  color:var(--secondary-color);
}

h1,h2,h3{
  font-family:Ubuntu, serif;
  color:var(--primary-color);
}

h2{
  display:block;
  width:2em;
  font-size:3em;
  font-weight:700;
  border-bottom:solid 2px;
  width:100%;
}

h3{
  font-size:1.5em;
}

body{
    background-color:var(--background-color);
    overflow-X:hidden;
}


/*-------------------------header-------------------------------*/

header{
  height:90vh;
  background-color:var(--primary-color);
  background-image:url('../assets/image/landingmobile.svg');
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment:fixed;
}

header nav{
  position:fixed;
  top:0;
  z-index:2;
  width:100%;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

header nav ul{
  background-color:var(--header-color);
  padding:1em;
  height:4em;
  display: flex;
  flex-wrap: wrap;
  align-items:center;
  justify-content:flex-end;
  list-style-type: none;
}

header nav ul li a{
  font-size:1.4em;
  margin:0.5em;
  color:white;
  text-decoration:none;
  transition:all 0.2s;
}

header nav ul li a:hover{
  transform:scale(14);
  text-shadow:0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

header nav ul li:first-child{
  margin-right:auto;
}

header article{
  position:relative;
  width:100vw;
  height:60vh;
  padding-top:25%;
  text-align:center;
  animation: hallo 1.5s ease-out;
}

header article h1{
  font-size:5em;
  color:var(--text-color);
  transform-origin:right;
}

header article p{
  margin-top:1em;
  padding: 0 0.5em 0 0.5em;
  font-size:2em;
  color:white;
}

header article p span{
  color:var(--secondary-color);
}

/*pijl die naar beneden wijst*/
header div{
    background-color:var(--background-color);
}
header > div{
  display:flex;
  justify-content:center;
  margin-left: -3em;
  position:absolute;
  bottom:0;
  width: 105vw;
  height:2.5vh;
}

header div>div{
  display:flex;
  overflow:hidden;
  justify-content:center;
  height:4em;
  width:4em;
  border-radius:50%;
  position:absolute;
  top:-4.5vh;
  left:
  animation: bounce 3.5s cubic-bezier(0.24, 1.26, 0.26, 1.36);
}

header div div div{
  background-color:var(--secondary-color);
  width:0.2em;
  height:1.4em;
  top:1em;
  border-radius:initial;
  animation:scroll 1.5s infinite ease-out;
  animation-delay: 4.5s;
}

/*overlay*/
.overlay{
  position:absolute;
  width:105vw;
  height:100vh;
  overflow:hidden;
  top:0;
  left:0;
  z-index:0;
  background: linear-gradient(135deg, rgb(41, 130, 232) 0%,rgba(37,117,242,0.86) 80%,rgba(41,121,255,0.70) 100%);;
}

.overlay div{
  position:absolute;
  top:30%;
  height:10em;
  width:10em;
  border-radius:50%;
  background-color:#4537e4;
  opacity:0.1;
  animation: bubles infinite 80s linear alternate;
  animation-delay:2s;
}

.overlay div:nth-child(2){
  top:60%;
  left:80%;
  animation-direction:alternate reverse;
}


.overlay div:nth-child(3){
  top:10%;
  left:10%;
  animation-direction:reverse;
}
/*-------------------------Overzicht pagina------------------*/
.overzicht{
  display:flex;
  flex-wrap:wrap;
  justify-content:center;
  margin-top:10vh;
  padding:1em 1em;
}

main section{
  width:90%;
}


main section article{
  display:flex;
  justify-content:center;
  flex-wrap:wrap;
  margin-top:2em;
  padding:0.5em;
  height:25em;
  transition:all 0.5s;
  background-color:var(--secondary-background-color);
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

main section article section{
  display:flex;
  flex-wrap:wrap;
  justify-content:center;
  transition: all 0.5s;
  align-items: center;
}

main section article p{
  margin-top:1em;
  text-align:center;
}

main section article a, footer a{
  display:block;
  font-size:1.1em;
  width:7em;
  height:2em;
  color:var(--text-color);
  background-color:var(--secondary-color);
  border-radius:3%;
  text-align:center;
  line-height:2;
  margin-top:1em;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.5s;
}

main section article a:hover{
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

main section article div{
  display:flex;
  justify-content:center;
  margin-top:1.5em;
  height:12em;
  width:100%;
  overflow:hidden;
  transition:all 0.5s;
}

main section article img{
  max-width:100%;
  max-height:100%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

main section:nth-child(2){
  margin-top: 7em;
}

.recent article{
  color:white;
  background-color:var(--primary-color)
}

.recent article h3{
  color:white;
}

/*-------------------------Footer-----------------------------*/
footer{
  background-color:rgba(0, 0, 0, 0.1);
  margin-top:5em;
  color:white;
  text-align:center;
  padding:0.5em;
}

footer a{
    display: inline-block;
    margin:0;
}

footer a:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

/*-------------------------Animation--------------------------*/
@keyframes scroll{
  from{
    transform:translateY(-0.5em);
    opacity:0.2;
  }
  to{
    transform:translateY(1em);
    opacity:1;
  }
}

@keyframes bounce{
  0%{
    transform:translateY(-110vh);
  }

  50%{
    transform:translateY(-0.5em);
  }

  68%{
     transform:translateY(-9em);
  }

  70%{
    transform:translateY(-10em);
  }

  90%{
    transform:translateY(-1em);
  }
  100%{
    transform:translateY(0);
  }
}

@keyframes hallo{
 from{
   opacity:0.2;
   transform:translateX(-110vw);
 }

 to{
   opacity:1;
   transform:translateX(0);
 }
}

@keyframes bubles{
  0%{
    transform:translate(0);
  }

  25%{
    transform:translate(-70vw, -60vh)
  }

  50%{
    transform:translate(10vw, 100vh);
  }

  75%{
    transform:translate(-100vw, 10vh);
  }

  100%{
    transform:translate(79vw, -30vh);
  }
 
}


/*-------------------------Media Queries-----------------*/
@media (min-width: 30.25em){

  main section article{
    font-size:1.2em;
  }
  
}

/*-------------------------Media Queries-----------------*/
@media (min-width: 48.5em){


   header article h1{
    font-size:15vw;
  }

  header article p{
    font-size:5vw;
  }

  main section article{
    flex-wrap:initial;
  }

  main section article div{
    order:-1;
    height:100%;
    width:100%;
    align-items:center;

  }

  main section article section{
    width:50%;
    align-items:space-around;
  }

  main section article h3{
    font-size:7vw;
  }

  main section article div img{
    box-shadow:none;
  }



}

@media (min-width: 70em){
  .overlay{
    background:none;
  }

  header{
    height:97vh;
  }

    header article{
    text-align:initial;
    padding:8em 5em;
  }


  header article h1{
    font-size:17vw;
  }

  header article p{
    font-size:2.5vw;
    display:block;
    width:14em;
  }
  

  header div>div{
  height:5em;
  width:5em;
  animation: bounce 4.5s cubic-bezier(0.24, 1.26, 0.26, 1.36);
}

header div div div{
  width:0.3em;
  height:2em;
}

.overzicht {
  justify-content:initial;
  padding:0;
}

main section h2{
  display:block;
  width: 12%;
  margin-left:2em;
}

.recent  article{
  width:100vw;
  height:40em;
  color:white;
  background-color:var(--primary-color)
}
  
.recent article p{
 font-size: 2.5em;
}

.recent  article h3{
  color:white;
  font-size:5vw;
  line-height:2;
}
  
  .recent article div{
    width: 50%;
  }
  
  .recent article section p{
  margin:-2em 0;
    
  }

.andere{
  display:flex;
  width:100vw;
  justify-content:center;
}

.andere h2{
  display:block;
  position:absolute;
  left: 0em;
}

.andere article{
  justify-content:center;
  margin-top:6em;
  width:23em;
  flex-wrap: wrap;
}

.andere article:nth-of-type(2){
  margin-left:1em;
  margin-right:1em;
}

.andere article section h3{
  font-size:2em;
}

/************/


  .andere article div{
    order:0;
    justify-content:center;
    align-items:center;
    flex-wrap: initial;
    height: 50%;
  }

  .andere article section{
    width:100%;
    align-items:space-around;
  }

  .andere article h3{
    font-size:7vw;
  }

  .andere article div img{
    box-shadow:none;
  }





}

